# Itomori

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Itomori.toml  README.md  debug_search.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
Itomori-Website/: README.md
Itomori-Website/frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
Itomori-Website/frontend/src/app/: globals.css  layout.tsx  page.tsx
Itomori-Website/frontend/src/components/: Footer.tsx  Installation.tsx  Navbar.tsx  ShowPreview.tsx  SnowFall.tsx  theme-toggle.tsx
Linux Install Scripts/: install-fish.sh  install.sh
docs/: README.md  mkdocs.yml
docs/docs/: index.md
docs/site/: 404.html  index.html
docs/site/search/: search_index.json
src/: AddNoteInputBox.py  VersionScreen.py  ViewRawNotes.py  WelcomeTextRender.py  main.py  notes.json  notes.txt  style.tcss
src/Itomori/: __init__.py  a.out  install.c  install.rs  main.py  style.tcss
src/Itomori/components/: AboutScreen.py  LicenseScreen.py  ViewNotes.py  ViewRawNotes.py
src/components/: AddNoteInputBox.py  InfoWhereSaved.py  LicenseScreen.py  LogoText.py  VersionScreen.py  ViewRawNotes.py  WelcomeTextRender.py
src/itomori/: __init__.py  main.py  style.tcss
src/itomori/components/: AboutScreen.py  InfoWhereSaved.py  JohnWickQuotes.py  LincenseScreen.py  RecentNotes.py  ViewRawNotes.py
src/itomori/pages/: AboutScreen.py  ConfirmClearLogs.py  ConfirmClearNotes.py  EditNote.py  LincenseScreen.py  Settings.py
src/itomori/styles/: settings.tcss
src/itomori/themes/: YourNameTheme.py
(+9 files in other folders)
