[project]
name = "Itomori"
version = "1.0.0"
description = "TUI Note Writing Tool"
readme = "README.md"
requires-python = ">=3.14"
author = [
    { name = "Ahum Maitra", email = "theahummaitra@gmail.com" }
]
dependencies = [
    "textual[syntax]>=6.6.0",
    "textual-dev>=1.8.0",
    "black>=25.11.0",
    "loguru>=0.7.3",
    "fire>=0.7.1",
    "tinydb>=4.8.2",
    "arrow>=1.4.0",
    "pyjokes>=0.8.3",
    "tabulate>=0.9.0",
]
license = "License.md"
