[project]
name = "Itomori"
version = "1.0.0"
description = "TUI Note Writing Tool"
readme = "README.md"
requires-python = ">=3.14"
author = [
    { name = "Ahum Maitra", email = "theahummaitra@gmail.com" }
]
dependencies = [
    "textual[syntax]>=6.6.0",
    "textual-dev>=1.8.0",
    "loguru>=0.7.3",
    "tinydb>=4.8.2",
    "arrow>=1.4.0",
    "pyjokes>=0.8.3",
    "ruff>=0.14.6",
]
license = "License.md"
